// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BuildInfraSpecifications snapshot test Renders with multiple stages 1`] = `
<div>
  <div
    class="wrapper"
  >
    <div
      class="contentSection"
    >
      <div
        class="OverlaySpinner--overlaySpinner"
      >
        <div
          class="Layout--vertical StyledProps--main"
        >
          <div
            class="tabHeading"
            id="infrastructureDefinition"
          >
            pipelineSteps.build.infraSpecifications.whereToRun
          </div>
          <form
            class="FormikForm--main"
          >
            <div>
              <div
                class="bp3-card bp3-elevation-0 Card--card sectionCard"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-xxlarge StyledProps--main"
                >
                  <div
                    class="card"
                    style="width: 410px;"
                  >
                    <p
                      class="StyledProps--font StyledProps--main cardTitle StyledProps--color StyledProps--color-black StyledProps--margin-bottom-large"
                    >
                      pipelineSteps.build.infraSpecifications.propagate
                    </p>
                    <div
                      class="bp3-form-group"
                      data-id="useFromStage-0"
                    >
                      <div
                        class="bp3-form-content"
                      >
                        <div
                          class="bp3-popover-wrapper Select--main bp3-fill"
                        >
                          <div
                            class="bp3-popover-target"
                          >
                            <div
                              class="bp3-input-group"
                            >
                              <input
                                autocomplete="off"
                                class="bp3-input"
                                name="useFromStage"
                                placeholder="- Select -"
                                style="padding-right: 0px;"
                                type="text"
                                value=""
                              />
                              <span
                                class="bp3-input-action"
                              >
                                <span
                                  class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                                  icon="chevron-down"
                                >
                                  <svg
                                    data-icon="chevron-down"
                                    height="14"
                                    viewBox="0 0 16 16"
                                    width="14"
                                  >
                                    <desc>
                                      chevron-down
                                    </desc>
                                    <path
                                      d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                      fill-rule="evenodd"
                                    />
                                  </svg>
                                </span>
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    
                    <div
                      class="Accordion--accordion"
                    >
                      <div
                        class="Accordion--panel"
                        data-open="false"
                        data-testid="advanced-panel"
                        id="advanced-panel"
                      >
                        <div
                          class="Accordion--summary"
                          data-testid="advanced-summary"
                        >
                          <div
                            class="Accordion--chevron"
                          />
                          <div
                            class=""
                          >
                            <div
                              class="tabHeading"
                              id="advanced"
                              style="margin-bottom: 0px;"
                            >
                              advancedTitle
                            </div>
                          </div>
                        </div>
                        <div
                          class="bp3-collapse Accordion--collapse"
                        >
                          <div
                            aria-hidden="false"
                            class="bp3-collapse-body"
                            style="transform: translateY(-undefinedpx);"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="card active"
                    style="width: 460px;"
                  >
                    <p
                      class="StyledProps--font StyledProps--main cardTitle StyledProps--color StyledProps--color-black StyledProps--margin-bottom-large"
                    >
                      pipelineSteps.build.infraSpecifications.newConfiguration
                    </p>
                    <div
                      class="connectorLabel"
                    >
                      <div
                        class="StyledProps--font StyledProps--main"
                        style="margin-bottom: 5px;"
                      >
                        <span
                          class="Tooltip--acenter bp3-label"
                          data-tooltip-id="ciBuildInfra_connectorRef"
                        >
                          <p
                            class="StyledProps--font StyledProps--main"
                          >
                            connectors.title.k8sCluster
                          </p>
                        </span>
                      </div>
                      <div
                        style="display: flex; align-items: center;"
                      >
                        <div
                          class="bp3-form-group"
                          data-id="undefined-1"
                          style="margin-bottom: 0px;"
                        >
                          <div
                            class="bp3-form-content"
                          >
                            <div
                              class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                              style="width: 300px;"
                            >
                              <button
                                class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main container Button--iconOnly Button--without-shadow Button--withRightIcon"
                                data-testid="cr-field-connectorRef"
                                style="width: 300px;"
                                type="button"
                              >
                                <span
                                  class="bp3-button-text"
                                >
                                  <div
                                    class="Layout--horizontal Layout--layout-spacing-small StyledProps--main selectWrapper StyledProps--flex StyledProps--flex-distribution-space-between"
                                  >
                                    <span
                                      class="bp3-popover-wrapper"
                                    >
                                      <span
                                        class="bp3-popover-target"
                                      >
                                        <p
                                          class="StyledProps--font StyledProps--main label StyledProps--color StyledProps--color-grey800"
                                          tabindex="0"
                                        >
                                          tesa 1
                                        </p>
                                      </span>
                                    </span>
                                    <div
                                      class="rightStatus"
                                    >
                                      <span
                                        class="bp3-icon bp3-icon-full-circle StyledProps--main status redStatus"
                                        data-testid="crf-status"
                                        icon="full-circle"
                                      >
                                        <svg
                                          data-icon="full-circle"
                                          height="6"
                                          viewBox="0 0 16 16"
                                          width="6"
                                        >
                                          <desc>
                                            full-circle
                                          </desc>
                                          <path
                                            d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                                            fill-rule="evenodd"
                                          />
                                        </svg>
                                      </span>
                                      <span
                                        class="Tag--main"
                                      >
                                        <span
                                          class="bp3-tag bp3-minimal tag"
                                        >
                                          <span
                                            class="bp3-text-overflow-ellipsis bp3-fill"
                                          >
                                            project
                                          </span>
                                        </span>
                                      </span>
                                    </div>
                                  </div>
                                </span>
                                <span
                                  class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                                  icon="chevron-down"
                                >
                                  <svg
                                    data-icon="chevron-down"
                                    height="14"
                                    viewBox="0 0 16 16"
                                    width="14"
                                  >
                                    <desc>
                                      chevron-down
                                    </desc>
                                    <path
                                      d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                      fill-rule="evenodd"
                                    />
                                  </svg>
                                </span>
                              </button>
                              <span
                                class="bp3-popover-wrapper MultiTypeInput--wrapper"
                              >
                                <span
                                  class="bp3-popover-target"
                                >
                                  <button
                                    class="MultiTypeInput--btn MultiTypeInput--FIXED"
                                  >
                                    <span
                                      class="bp3-icon StyledProps--main"
                                      data-icon="fixed-input"
                                    >
                                      <svg
                                        height="12"
                                        viewBox="0 0 9 9"
                                        width="12"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                          fill="currentColor"
                                        />
                                      </svg>
                                    </span>
                                  </button>
                                </span>
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="fieldsGroup withoutSpacing"
                    >
                      <div
                        class="bp3-form-group"
                        data-id="namespace-2"
                        style="width: 300px;"
                      >
                        <label
                          class="bp3-label"
                          for="namespace"
                        >
                          <span
                            class="Tooltip--acenter"
                            data-tooltip-id="ciBuildInfra_namespace"
                          >
                            <div
                              class="Text--withDocsTooltip"
                              data-tooltip-id="namespace"
                            >
                              <p
                                class="StyledProps--font StyledProps--main"
                              >
                                pipelineSteps.build.infraSpecifications.namespace
                              </p>
                            </div>
                          </span>
                           
                          <span
                            class="bp3-text-muted"
                          />
                        </label>
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                          >
                            <div
                              class="bp3-input-group MultiTypeInput--input"
                            >
                              <input
                                autocomplete="off"
                                class="bp3-input"
                                name="namespace"
                                placeholder="pipeline.infraSpecifications.namespacePlaceholder"
                                type="text"
                                value=""
                              />
                            </div>
                            <span
                              class="bp3-popover-wrapper MultiTypeInput--wrapper"
                            >
                              <span
                                class="bp3-popover-target"
                              >
                                <button
                                  class="MultiTypeInput--btn MultiTypeInput--FIXED"
                                >
                                  <span
                                    class="bp3-icon StyledProps--main"
                                    data-icon="fixed-input"
                                  >
                                    <svg
                                      height="12"
                                      viewBox="0 0 9 9"
                                      width="12"
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <path
                                        d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                        fill="currentColor"
                                      />
                                    </svg>
                                  </span>
                                </button>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="Accordion--accordion"
                    >
                      <div
                        class="Accordion--panel"
                        data-open="false"
                        data-testid="advanced-panel"
                        id="advanced-panel"
                      >
                        <div
                          class="Accordion--summary"
                          data-testid="advanced-summary"
                        >
                          <div
                            class="Accordion--chevron"
                          />
                          <div
                            class=""
                          >
                            <div
                              class="tabHeading"
                              id="advanced"
                              style="margin-bottom: 0px;"
                            >
                              advancedTitle
                            </div>
                          </div>
                        </div>
                        <div
                          class="bp3-collapse Accordion--collapse"
                        >
                          <div
                            aria-hidden="false"
                            class="bp3-collapse-body"
                            style="transform: translateY(-undefinedpx);"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`BuildInfraSpecifications snapshot test able to select a connector 1`] = `
<div>
  <div
    class="wrapper"
  >
    <div
      class="contentSection"
    >
      <div
        class="OverlaySpinner--overlaySpinner"
      >
        <div
          class="Layout--vertical StyledProps--main"
        >
          <div
            class="tabHeading"
            id="infrastructureDefinition"
          >
            pipelineSteps.build.infraSpecifications.whereToRun
          </div>
          <form
            class="FormikForm--main"
          >
            <div>
              <div
                class="bp3-card bp3-elevation-0 Card--card sectionCard"
              >
                <div
                  class="connectorLabel"
                >
                  <div
                    class="StyledProps--font StyledProps--main"
                    style="margin-bottom: 5px;"
                  >
                    <span
                      class="Tooltip--acenter bp3-label"
                      data-tooltip-id="ciBuildInfra_connectorRef"
                    >
                      connectors.title.k8sCluster
                    </span>
                  </div>
                  <div
                    style="display: flex; align-items: center;"
                  >
                    <div
                      class="bp3-form-group"
                      data-id="undefined-0"
                      style="margin-bottom: 0px;"
                    >
                      <div
                        class="bp3-form-content"
                      >
                        <div
                          class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                          style="width: 300px;"
                        >
                          <button
                            class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main container Button--iconOnly Button--without-shadow Button--withRightIcon"
                            data-testid="cr-field-connectorRef"
                            style="width: 300px;"
                            type="button"
                          >
                            <span
                              class="bp3-button-text"
                            >
                              <div
                                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main selectWrapper StyledProps--flex StyledProps--flex-distribution-space-between"
                              >
                                <span
                                  class="bp3-popover-wrapper"
                                >
                                  <span
                                    class="bp3-popover-target"
                                  >
                                    <p
                                      class="StyledProps--font StyledProps--main label StyledProps--color StyledProps--color-grey800"
                                      tabindex="0"
                                    >
                                      tesa 1
                                    </p>
                                  </span>
                                </span>
                                <div
                                  class="rightStatus"
                                >
                                  <span
                                    class="bp3-icon bp3-icon-full-circle StyledProps--main status redStatus"
                                    data-testid="crf-status"
                                    icon="full-circle"
                                  >
                                    <svg
                                      data-icon="full-circle"
                                      height="6"
                                      viewBox="0 0 16 16"
                                      width="6"
                                    >
                                      <desc>
                                        full-circle
                                      </desc>
                                      <path
                                        d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                                        fill-rule="evenodd"
                                      />
                                    </svg>
                                  </span>
                                  <span
                                    class="Tag--main"
                                  >
                                    <span
                                      class="bp3-tag bp3-minimal tag"
                                    >
                                      <span
                                        class="bp3-text-overflow-ellipsis bp3-fill"
                                      >
                                        project
                                      </span>
                                    </span>
                                  </span>
                                </div>
                              </div>
                            </span>
                            <span
                              class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                              icon="chevron-down"
                            >
                              <svg
                                data-icon="chevron-down"
                                height="14"
                                viewBox="0 0 16 16"
                                width="14"
                              >
                                <desc>
                                  chevron-down
                                </desc>
                                <path
                                  d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </button>
                          <span
                            class="bp3-popover-wrapper MultiTypeInput--wrapper"
                          >
                            <span
                              class="bp3-popover-target"
                            >
                              <button
                                class="MultiTypeInput--btn MultiTypeInput--FIXED"
                              >
                                <span
                                  class="bp3-icon StyledProps--main"
                                  data-icon="fixed-input"
                                >
                                  <svg
                                    height="12"
                                    viewBox="0 0 9 9"
                                    width="12"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <path
                                      d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                      fill="currentColor"
                                    />
                                  </svg>
                                </span>
                              </button>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="fieldsGroup withoutSpacing"
                >
                  <div
                    style="width: 300px;"
                  >
                    <div
                      class="Text--withDocsTooltip"
                      data-tooltip-id="namespace"
                    >
                      <p
                        class="StyledProps--font StyledProps--main"
                      >
                        pipelineSteps.build.infraSpecifications.namespace
                      </p>
                    </div>
                    <div
                      style="display: flex; align-items: center;"
                    >
                      <div
                        class="bp3-form-group"
                        data-id="namespace-1"
                        style="margin-bottom: 0px; flex-grow: 1;"
                      >
                        
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                          >
                            <div
                              class="bp3-input-group MultiTypeInput--input"
                            >
                              <input
                                autocomplete="off"
                                class="bp3-input"
                                name="namespace"
                                placeholder="pipeline.infraSpecifications.namespacePlaceholder"
                                type="text"
                                value=""
                              />
                            </div>
                            <span
                              class="bp3-popover-wrapper MultiTypeInput--wrapper"
                            >
                              <span
                                class="bp3-popover-target"
                              >
                                <button
                                  class="MultiTypeInput--btn MultiTypeInput--FIXED"
                                >
                                  <span
                                    class="bp3-icon StyledProps--main"
                                    data-icon="fixed-input"
                                  >
                                    <svg
                                      height="12"
                                      viewBox="0 0 9 9"
                                      width="12"
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <path
                                        d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                        fill="currentColor"
                                      />
                                    </svg>
                                  </span>
                                </button>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="Accordion--accordion"
              >
                <div
                  class="Accordion--panel"
                  data-open="false"
                  data-testid="advanced-panel"
                  id="advanced-panel"
                >
                  <div
                    class="Accordion--summary"
                    data-testid="advanced-summary"
                  >
                    <div
                      class="Accordion--chevron"
                    />
                    <div
                      class=""
                    >
                      <div
                        class="tabHeading"
                        id="advanced"
                        style="margin-bottom: 0px;"
                      >
                        advancedTitle
                      </div>
                    </div>
                  </div>
                  <div
                    class="bp3-collapse Accordion--collapse"
                  >
                    <div
                      aria-hidden="false"
                      class="bp3-collapse-body"
                      style="transform: translateY(-undefinedpx);"
                    />
                  </div>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`BuildInfraSpecifications snapshot test initializes ok 1`] = `
<div>
  <div
    class="wrapper"
  >
    <div
      class="contentSection"
    >
      <div
        class="OverlaySpinner--overlaySpinner"
      >
        <div
          class="Layout--vertical StyledProps--main"
        >
          <div
            class="tabHeading"
            id="infrastructureDefinition"
          >
            pipelineSteps.build.infraSpecifications.whereToRun
          </div>
          <form
            class="FormikForm--main"
          >
            <div>
              <div
                class="bp3-card bp3-elevation-0 Card--card sectionCard"
              >
                <div
                  class="connectorLabel"
                >
                  <div
                    class="StyledProps--font StyledProps--main"
                    style="margin-bottom: 5px;"
                  >
                    <span
                      class="Tooltip--acenter bp3-label"
                      data-tooltip-id="ciBuildInfra_connectorRef"
                    >
                      connectors.title.k8sCluster
                    </span>
                  </div>
                  <div
                    style="display: flex; align-items: center;"
                  >
                    <div
                      class="bp3-form-group"
                      data-id="undefined-0"
                      style="margin-bottom: 0px;"
                    >
                      <div
                        class="bp3-form-content"
                      >
                        <div
                          class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                          style="width: 300px;"
                        >
                          <button
                            class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main container Button--iconOnly Button--without-shadow Button--withRightIcon"
                            data-testid="cr-field-connectorRef"
                            style="width: 300px;"
                            type="button"
                          >
                            <span
                              class="bp3-button-text"
                            >
                              <div
                                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main selectWrapper StyledProps--flex StyledProps--flex-distribution-space-between"
                              >
                                <span
                                  class="bp3-popover-wrapper"
                                >
                                  <span
                                    class="bp3-popover-target"
                                  >
                                    <p
                                      class="StyledProps--font StyledProps--main label StyledProps--color StyledProps--color-grey800"
                                      tabindex="0"
                                    >
                                      tesa 1
                                    </p>
                                  </span>
                                </span>
                                <div
                                  class="rightStatus"
                                >
                                  <span
                                    class="bp3-icon bp3-icon-full-circle StyledProps--main status redStatus"
                                    data-testid="crf-status"
                                    icon="full-circle"
                                  >
                                    <svg
                                      data-icon="full-circle"
                                      height="6"
                                      viewBox="0 0 16 16"
                                      width="6"
                                    >
                                      <desc>
                                        full-circle
                                      </desc>
                                      <path
                                        d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                                        fill-rule="evenodd"
                                      />
                                    </svg>
                                  </span>
                                  <span
                                    class="Tag--main"
                                  >
                                    <span
                                      class="bp3-tag bp3-minimal tag"
                                    >
                                      <span
                                        class="bp3-text-overflow-ellipsis bp3-fill"
                                      >
                                        project
                                      </span>
                                    </span>
                                  </span>
                                </div>
                              </div>
                            </span>
                            <span
                              class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                              icon="chevron-down"
                            >
                              <svg
                                data-icon="chevron-down"
                                height="14"
                                viewBox="0 0 16 16"
                                width="14"
                              >
                                <desc>
                                  chevron-down
                                </desc>
                                <path
                                  d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </button>
                          <span
                            class="bp3-popover-wrapper MultiTypeInput--wrapper"
                          >
                            <span
                              class="bp3-popover-target"
                            >
                              <button
                                class="MultiTypeInput--btn MultiTypeInput--FIXED"
                              >
                                <span
                                  class="bp3-icon StyledProps--main"
                                  data-icon="fixed-input"
                                >
                                  <svg
                                    height="12"
                                    viewBox="0 0 9 9"
                                    width="12"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <path
                                      d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                      fill="currentColor"
                                    />
                                  </svg>
                                </span>
                              </button>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="fieldsGroup withoutSpacing"
                >
                  <div
                    style="width: 300px;"
                  >
                    <div
                      class="Text--withDocsTooltip"
                      data-tooltip-id="namespace"
                    >
                      <p
                        class="StyledProps--font StyledProps--main"
                      >
                        pipelineSteps.build.infraSpecifications.namespace
                      </p>
                    </div>
                    <div
                      style="display: flex; align-items: center;"
                    >
                      <div
                        class="bp3-form-group"
                        data-id="namespace-1"
                        style="margin-bottom: 0px; flex-grow: 1;"
                      >
                        
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                          >
                            <div
                              class="bp3-input-group MultiTypeInput--input"
                            >
                              <input
                                autocomplete="off"
                                class="bp3-input"
                                name="namespace"
                                placeholder="pipeline.infraSpecifications.namespacePlaceholder"
                                type="text"
                                value=""
                              />
                            </div>
                            <span
                              class="bp3-popover-wrapper MultiTypeInput--wrapper"
                            >
                              <span
                                class="bp3-popover-target"
                              >
                                <button
                                  class="MultiTypeInput--btn MultiTypeInput--FIXED"
                                >
                                  <span
                                    class="bp3-icon StyledProps--main"
                                    data-icon="fixed-input"
                                  >
                                    <svg
                                      height="12"
                                      viewBox="0 0 9 9"
                                      width="12"
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <path
                                        d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                        fill="currentColor"
                                      />
                                    </svg>
                                  </span>
                                </button>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="Accordion--accordion"
              >
                <div
                  class="Accordion--panel"
                  data-open="false"
                  data-testid="advanced-panel"
                  id="advanced-panel"
                >
                  <div
                    class="Accordion--summary"
                    data-testid="advanced-summary"
                  >
                    <div
                      class="Accordion--chevron"
                    />
                    <div
                      class=""
                    >
                      <div
                        class="tabHeading"
                        id="advanced"
                        style="margin-bottom: 0px;"
                      >
                        advancedTitle
                      </div>
                    </div>
                  </div>
                  <div
                    class="bp3-collapse Accordion--collapse"
                  >
                    <div
                      aria-hidden="false"
                      class="bp3-collapse-body"
                      style="transform: translateY(-undefinedpx);"
                    />
                  </div>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;
